--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "main": "index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
@@ -15,11 +16,14 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.9.1",
-    "swagger-ui-express": "^4.1.4",
-    "yamljs": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.1"
+    "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.6.1",
+    "redux": "^4.2.1",
+    "swagger-ui-express": "^4.1.4",
+    "yamljs": "^0.3.0"
   },
   "scripts": {
     "dev:server": "nodemon ./server/server.js",
@@ -30,10 +34,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "nodemon": "^2.0.20",
     "vite": "^4.1.0"
   }
 }
